@@ -280,7 +280,7 @@ class LSX_TO_Settings extends Tour_Operator {
 				?>
 			</tr>
 			<tr class="form-field">
-				<th scope="row">
+				<th scope="row"> 
 					<label for="description"><?php esc_html_e('Disable Enquire Modal','tour-operator'); ?></label>
 				</th>
 				<td>
@@ -396,44 +396,6 @@ class LSX_TO_Settings extends Tour_Operator {
 				<input type="text" {{#if enquire_link}} value="{{enquire_link}}" {{/if}} name="enquire_link" />
 			</td>
 		</tr>
-			<tr class="form-field">
-				<th scope="row">
-					<label for="enquiry_contact_name"><?php esc_html_e('Enquire Contact Name','tour-operator'); ?></label>
-				</th>
-				<td>
-					<input type="text" {{#if enquiry_contact_name}} value="{{enquiry_contact_name}}" {{/if}} id="enquiry_contact_name" name="enquiry_contact_name" />
-				</td>
-			</tr>
-			<tr class="form-field">
-				<th scope="row">
-					<label for="enquiry_contact_email"><?php esc_html_e('Enquire Contact Email','tour-operator'); ?></label>
-				</th>
-				<td>
-					<input type="text" {{#if enquiry_contact_email}} value="{{enquiry_contact_email}}" {{/if}} id="enquiry_contact_email" name="enquiry_contact_email" />
-				</td>
-			</tr>
-			<tr class="form-field">
-				<th scope="row">
-					<label for="enquiry_contact_phone"><?php esc_html_e('Enquire Contact Phone','tour-operator'); ?></label>
-				</th>
-				<td>
-					<input type="text" {{#if enquiry_contact_phone}} value="{{enquiry_contact_phone}}" {{/if}} id="enquiry_contact_phone" name="enquiry_contact_phone" />
-				</td>
-			</tr>
-			<tr class="form-field">
-				<th scope="row">
-					<label for="enquiry_contact_image"> <?php esc_html_e( 'Enquire Contact Image', 'tour-operator' ); ?></label>
-				</th>
-				<td>
-					<input class="input_image_id" type="hidden" {{#if enquiry_contact_image_id}} value="{{enquiry_contact_image_id}}" {{/if}} name="enquiry_contact_image_id" />
-					<input class="input_image" type="hidden" {{#if enquiry_contact_image}} value="{{enquiry_contact_image}}" {{/if}} name="enquiry_contact_image" />
-					<div class="thumbnail-preview">
-						{{#if enquiry_contact_image}}<img src="{{enquiry_contact_image}}" width="150" style="width:150px" />{{/if}}	
-					</div>
-					<a {{#if enquiry_contact_image}}style="display:none;"{{/if}} class="button-secondary lsx-thumbnail-image-add"><?php esc_html_e( 'Choose Image','tour-operator'); ?></a>
-					<a {{#unless enquiry_contact_image}}style="display:none;"{{/unless}} class="button-secondary lsx-thumbnail-image-delete"><?php esc_html_e( 'Delete','tour-operator'); ?></a>
-				</td>
-			</tr>
 
 		<?php	
 			do_action('lsx_to_framework_'.$post_type.'_tab_general_settings_bottom',$post_type);
