@@ -22,6 +22,7 @@
 * Fix - Small fixes on front-end fields
 * Fix - Made Google Maps works on back-end
 * Fix - Fixed content_part filter for plugin and add-ons
+* Fix - Removed general contact fields from post types
 
 ### 1.0.4
 * Removed the last of the LSX_TO_POSTEXPIRATOR_TYPES constants
